--- a/src/scripts/blocks/MapIntro/MapIntro.scss
+++ b/src/scripts/blocks/MapIntro/MapIntro.scss
@@ -12,7 +12,7 @@
 }
 
 .map-intro {
-    padding: fn.toVw(156) 0 fn.toVw(212) 0;
+    margin: fn.toVw(156) 0 fn.toVw(212) 0;
 
     &.no-content {
         padding-bottom: 0;
