--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -184,7 +184,8 @@ a {
 }
 
 .solutions-list {
-    margin: fn.toVw(79) 0;
+    margin: fn.toVw(79) 0 0;
+    padding-bottom: fn.toVw(79);
 
     @include mx.phone {
         height: 100vh;
@@ -214,6 +215,9 @@ a {
             overflow: hidden;
 
             padding: 0 fn.toVw(10);
+
+            display: flex;
+            flex-direction: column;
 
             @include mx.phone {
                 padding: fn.toVw(12);
@@ -247,6 +251,12 @@ a {
             }
 
             .content-wrapper {
+                flex-grow: 1;
+
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+
                 @include mx.phone {
                     padding: 0 fn.toVw(18);
                 }
@@ -283,6 +293,7 @@ a {
 
                 p {
                     margin-right: fn.toVw(11);
+                    flex-grow: 1;
 
                     @include mx.phone {
                         margin: 0;
